# handson-ml

./: 02_end_to_end_machine_learning_project.ipynb
oreilly/: pyproject.toml
