[tool.poetry]
name = "oreilly"
version = "0.1.0"
description = ""
authors = ["kzyoshida <kazunari.yoshida.ks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
notebook = "^6.5.2"
matplotlib = "^3.6.3"
sklearn = "^0.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
